--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,5 +3,5 @@ languages:
   JavaScript: true
   PHP: false
   Python: true
-# exclude_paths:
-# - "foo/bar.rb"
+exclude_paths:
+ - "app/public/asset/js/*"
